removed rent section

--- a/nobroker-clone/about.html
+++ b/nobroker-clone/about.html
@@ -14,7 +14,7 @@
       <a href="index.html" class="logo">DirectDwell</a>
       <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="buy.html">Buy</a>
+        <a href="properties.html">Buy</a>
         <a href="sell.html">Sell</a>
         <a href="about.html" class="active">About</a>
         <a href="contact.html">Contact</a>
