--- a/nobroker-clone/contact.html
+++ b/nobroker-clone/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DirectDwell – Contact Us</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/contact.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
       <a href="index.html" class="logo">DirectDwell</a>
       <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="buy.html">Buy</a>
+        <a href="properties.html">Buy</a>
         <a href="sell.html">Sell</a>
         <a href="about.html">About</a>
         <a href="contact.html" class="active">Contact</a>
@@ -25,10 +25,10 @@
     <h1>Get in Touch</h1>
     <p style="text-align:center;max-width:600px;margin:auto;margin-bottom:2rem;">Have a property to sell? Need help finding one? Drop us a message!</p>
     <form style="max-width:600px;margin:auto;">
-      <div class="form-group"><label>Your Name *</label><input type="text" placeholder="Mr.jethalal" required></div>
-      <div class="form-group"><label>Email Address *</label><input type="email" placeholder="john@example.com" required></div>
-      <div class="form-group"><label>Phone (Optional)</label><input type="tel" placeholder="+91 98765 43210"></div>
-      <div class="form-group"><label>Message *</label><textarea placeholder="I'm looking to sell my 2 BHK in Bengaluru..." required></textarea></div>
+      <div class="form-group"><label>Your Name *</label><input type="text" placeholder="eg.Mr.jethalal" required></div>
+      <div class="form-group"><label>Email Address *</label><input type="email" placeholder="jetha@example.com" required></div>
+      <div class="form-group"><label>Phone </label><input type="tel" placeholder="+91 98765 43210"></div>
+      <div class="form-group"><label>Message *</label><textarea placeholder=" looking to sell my 2 BHK in Bengaluru..." required></textarea></div>
       <button type="submit" class="btn-submit">Send Message</button>
     </form>
   </section>
