--- a/nobroker-clone/index.html
+++ b/nobroker-clone/index.html
@@ -1,93 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DirectDwell– Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <a href="index.html" class="logo">DirectDwell</a>
-            <div class="nav-links">
-                <a href="index.html" class="active">Home</a>
-                <a href="buy.html">Buy</a>
-                <a href="sell.html">Sell</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </div>
+     <nav class="navbar">
+    <div class="container">
+      <a href="index.html" class="logo">DirectDwell</a>
+      <div class="nav-links">
+        <a href="index.html" class="active">Home</a>
+        <a href="properties.html">Buy</a>
+        <a href="sell.html">Sell</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div> 
+      </div>
     </nav>
     <section class="hero">
-        <div class="container">
-            <h1>Find Your Perfect Home</h1>
-            <p>Buy • Sell • Rent – Zero Brokerage</p>
-            <a href="buy.html" class="btn-primary">Explore Properties</a>
-        </div>
-    </section>
-    <div class="search-bar">
-        <form class="search-form">
-            <input type="text" placeholder="Search city,nearby property" />
-            <select>
-                <option>Buy</option>
-                <option>Rent</option>
-            </select>
-            <select>
-                <option>2 BHK</option>
-                <option>3 BHK</option>
-                <option>Villa</option>
-            </select>
-            <button type="submit">Search</button>
-        </form>
+    <div class="container">
+      <h1>Find Your Perfect Home</h1>
+      <p>Buy • Sell • Rent – Zero Brokerage</p>
+      <a href="properties.html" class="btn-primary">Explore Properties</a>
     </div>
+  </section>
+  <div class="search-bar">
+    <form class="search-form">
+      <input type="text" placeholder="Search city,nearby property" />
+      <select><option>Buy</option><option>Rent</option></select>
+      <select><option>2 BHK</option><option>3 BHK</option><option>Villa</option></select>
+      <button type="submit">Search</button>
+    </form>
+  </div>
     <section class="container">
-        <h2>Featured Properties</h2>
-        <div class="card-grid">
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80"
-                    alt="2 BHK">
-                <div class="card-info">
-                    <h3>Modern 2 BHK in Koramangala</h3>
-                    <p class="price">₹2.25 Cr</p>
-                    <p>Bengaluru • 950 sqft • Ready to Move</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://im.proptiger.com/1/1637659/6/life-republic-sector-r2-2nd-avenue-elevation-102659665.jpeg"
-                    alt="Villa">
-                <div class="card-info">
-                    <h3>4 BHK Luxury Villa</h3>
-                    <p class="price">₹2.1 Cr</p>
-                    <p>Pune • Gated Community • Pool</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80"
-                    alt="Apartment">
-                <div class="card-info">
-                    <h3>3 BHK High-Rise</h3>
-                    <p class="price">₹1.45 Cr</p>
-                    <p>Mumbai • Sea View • 2025 Possession</p>
-                </div>
-            </div>
+    <h2 >Featured Properties</h2>
+    <div class="card-grid">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="2 BHK">
+        <div class="card-info">
+          <h3>Modern 2 BHK in Koramangala</h3>
+          <p class="price">₹2.25 Cr</p>
+          <p >Bengaluru • 950 sqft • Ready to Move</p>
         </div>
-    </section>
-
-    <footer class="footer">
-        <div class="container">
-            <p>Terms and Conditions
-                DD Terms of Service
-                DD Privacy Policy
-                Cookies</p>
-            </p>
-            <p>© 2025 DirectDwell. All rights reserved.</p>
+      </div>
+      <div class="card">
+        <img src="https://im.proptiger.com/1/1637659/6/life-republic-sector-r2-2nd-avenue-elevation-102659665.jpeg" alt="Villa">
+        <div class="card-info">
+          <h3>4 BHK Luxury Villa</h3>
+          <p class="price">₹2.1 Cr</p>
+          <p >Pune • Gated Community • Pool</p>
         </div>
-    </footer>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Apartment">
+        <div class="card-info">
+          <h3>3 BHK High-Rise</h3>
+          <p class="price">₹1.45 Cr</p>
+          <p >Mumbai • Sea View • 2025 Possession</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <footer class="footer">
+    <div class="container">
+        <p>Terms and Conditions
+DD Terms of Service
+DD Privacy Policy
+Cookies</p> </p>
+      <p>© 2025 DirectDwell. All rights reserved.</p> 
+    </div>
+  </footer>
+    
 </body>
-
 </html>
