--- a/nobroker-clone/sell.html
+++ b/nobroker-clone/sell.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DirctDirectDwell – Sell</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/sell.css" />
 </head>
 <body>
 
@@ -14,7 +14,7 @@
       <a href="index.html" class="logo">DirectDwell</a>
       <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="buy.html">Buy</a>
+        <a href="properties.html">Buy</a>
         <a href="sell.html" class="active">Sell</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
