mainpage color changes

--- a/nobroker-clone/about.html
+++ b/nobroker-clone/about.html
@@ -10,7 +10,7 @@
 <body>
 
   <nav class="navbar">
-    <div class="container">
+    <div class="cat">
       <a href="index.html" class="logo">DirectDwell</a>
       <div class="nav-links">
         <a href="index.html">Home</a>
@@ -23,13 +23,13 @@
   </nav>
 
   <section class="hero" style="padding:6rem 0;">
-    <div class="container">
+    <div class="cat">
       <h1>About DirectDwell</h1>
       <p>Connecting owners and buyers since 2025</p>
     </div>
   </section>
 
-  <section class="container" style="text-align:center; padding:3rem 0;">
+  <section class="cat" style="text-align:center; padding:3rem 0;">
     <p style="font-size:1.1rem; max-width:800px; margin:0 auto 2rem;">
       DirectDwell is a modern real estate platform that eliminates middlemen. 
       List your property for free and connect directly with genuine buyers.
@@ -40,7 +40,7 @@
   </section>
 
   <footer class="footer">
-    <div class="container">
+    <div class="cat">
       <p>© 2025 DirectDwell. All rights reserved.</p>
     </div>
   </footer>
