--- a/nobroker-clone/index.html
+++ b/nobroker-clone/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="container">
+        <div class="cat">
             <a href="index.html" class="logo">DirectDwell</a>
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
@@ -23,13 +23,13 @@
         </div>
     </nav>
     <section class="hero">
-        <div class="container">
+        <div class="cat">
             <h1>Find Your Perfect Home</h1>
             <p>Buy • Sell • Rent – Zero Brokerage</p>
             <a href="properties.html" class="btn-primary">Explore Properties</a>
         </div>
     </section>
-    <div class="search-bar">
+    <div class="search-button">
         <form class="search-form">
             <input type="text" placeholder="Search city,nearby property" />
             <select>
@@ -44,13 +44,13 @@
             <button type="submit">Search</button>
         </form>
     </div>
-    <section class="container">
+    <section class="cat">
         <h2>Featured Properties</h2>
         <div class="card-grid">
             <div class="card">
                 <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80"
                     alt="2 BHK">
-                <div class="card-info">
+                <div class="card-housee">
                     <h3>Modern 2 BHK in Koramangala</h3>
                     <p class="price">₹2.25 Cr</p>
                     <p>Bengaluru • 950 sqft • Ready to Move</p>
@@ -59,7 +59,7 @@
             <div class="card">
                 <img src="https://im.proptiger.com/1/1637659/6/life-republic-sector-r2-2nd-avenue-elevation-102659665.jpeg"
                     alt="Villa">
-                <div class="card-info">
+                <div class="card-housee">
                     <h3>4 BHK Luxury Villa</h3>
                     <p class="price">₹2.1 Cr</p>
                     <p>Pune • Gated Community • Pool</p>
@@ -68,7 +68,7 @@
             <div class="card">
                 <img src="https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80"
                     alt="Apartment">
-                <div class="card-info">
+                <div class="card-housee">
                     <h3>3 BHK High-Rise</h3>
                     <p class="price">₹1.45 Cr</p>
                     <p>Mumbai • Sea View • 2025 Possession</p>
@@ -78,7 +78,7 @@
     </section>
 
     <footer class="footer">
-        <div class="container">
+        <div class="cat">
             <p>Terms and Conditions
                 DD Terms of Service
                 DD Privacy Policy
