--- a/nobroker-clone/sell.html
+++ b/nobroker-clone/sell.html
@@ -10,7 +10,7 @@
 <body>
 
   <nav class="navbar">
-    <div class="container">
+    <div class="cat">
       <a href="index.html" class="logo">DirectDwell</a>
       <div class="nav-links">
         <a href="index.html">Home</a>
@@ -25,13 +25,13 @@
   </nav>
 
   <section class="hero" style="padding:6rem 0;">
-    <div class="container">
+    <div class="cat">
       <h1>List Your Property</h1>
       <p>Zero commission • Reach thousands of buyers</p>
     </div>
   </section>
 
-  <section class="container">
+  <section class="cat">
     <form style="max-width:600px; margin:2rem auto;">
       <div class="form-group">
         <label>Property Title</label>
@@ -53,8 +53,8 @@
     </form>
   </section>
 
-  <footer class="footer">
-    <div class="container">
+  <footer class="foot">
+    <div class="cat">
       <p>© 2025 DirectDwell. All rights reserved.</p>
     </div>
   </footer>
