--- a/nobroker-clone/contact.html
+++ b/nobroker-clone/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="container">
+    <div class="cat">
       <a href="index.html" class="logo">DirectDwell</a>
       <div class="nav-links">
         <a href="index.html">Home</a>
@@ -21,19 +21,30 @@
       </div>
     </div>
   </nav>
-  <section class="page-content container">
+  <section class="page-mains cat">
     <h1>Get in Touch</h1>
     <p style="text-align:center;max-width:600px;margin:auto;margin-bottom:2rem;">Have a property to sell? Need help finding one? Drop us a message!</p>
     <form style="max-width:600px;margin:auto;">
-      <div class="form-group"><label>Your Name *</label><input type="text" placeholder="eg.Mr.jethalal" required></div>
-      <div class="form-group"><label>Email Address *</label><input type="email" placeholder="jetha@example.com" required></div>
-      <div class="form-group"><label>Phone </label><input type="tel" placeholder="+91 98765 43210"></div>
-      <div class="form-group"><label>Message *</label><textarea placeholder=" looking to sell my 2 BHK in Bengaluru..." required></textarea></div>
-      <button type="submit" class="btn-submit">Send Message</button>
+      <div class="form-group"><label>Your Name *</label>
+        <input type="text" placeholder="eg.Mr.jethalal" required>
+      </div>
+      <div class="form-group">
+        <label>Email Address *</label>
+        <input type="email" placeholder="jetha@example.com" required>
+      </div>
+      <div class="form-group">
+        <label>Phone </label><input type="tel" placeholder="+91 98765 43210">
+      </div>
+      <div class="form-group">
+        <label>Message *</label>
+        <textarea placeholder=" looking to sell my 2 BHK in Bengaluru..." required>
+        </textarea>
+      </div>
+      <button type="submit" class="button-smbt">Send Message</button>
     </form>
   </section>
   <footer class="footer">
-    <div class="container">
+    <div class="cat">
       <p>© 2025 DirectDwell</p>
     </div>
   </footer>
