--- a/nobroker-clone/index.html
+++ b/nobroker-clone/index.html
@@ -19,6 +19,9 @@
                 <a href="sell.html">Sell</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
+                <!-- new -->
+                <button class="nav-btn" onclick="openModal('login')">Login</button>
+                <button class="nav-btn signup" onclick="openModal('signup')">Sign Up</button>
             </div>
         </div>
     </nav>
@@ -44,7 +47,7 @@
             <button type="submit">Search</button>
         </form>
     </div>
-    <section class="cat">
+    <section class="cat" id="section">
         <h2>Featured Properties</h2>
         <div class="card-grid">
             <div class="card">
@@ -86,7 +89,24 @@
             </p>
             <p>© 2025 DirectDwell. All rights reserved.</p>
         </div>
+        <!-- Body ke end mein, </footer> se just pehle yeh pura modal paste kar -->
+<!-- Login / Sign Up Modal -->
+<div id="authModal" class="modal-overlay">
+    <div class="modal-box">
+        <span class="close-btn" onclick="closeModal()">×</span>
+        <h2 id="modalTitle">Login</h2>
+        <form id="authForm">
+            <input type="text" id="username" placeholder="Enter username" required />
+            <input type="password" id="password" placeholder="Enter password" required />
+            <button type="submit" id="submitBtn">Login</button>
+        </form>
+        <p id="switchText" class="switch-text">
+            Don't have an account? <span onclick="openModal('signup')" class="link">Sign Up</span>
+        </p>
+    </div>
+</div>
     </footer>
+    <script src="js/auth.js"></script>
 
 </body>
 
