--- a/nobroker-clone/sell.html
+++ b/nobroker-clone/sell.html
@@ -80,6 +80,7 @@
       <p>© 2025 DirectDwell. All rights reserved.</p>
     </div>
   </footer>
+   <script src="js/auth.js"></script>
 
 </body>
 </html>
