--- a/nobroker-clone/properties.html
+++ b/nobroker-clone/properties.html
@@ -102,6 +102,7 @@
       <p>© 2025 DirectDwell. All rights reserved.</p>
     </div>
   </footer>
+   <script src="js/auth.js"></script>
 
 </body>
 </html>
