enhanced the website

--- a/nobroker-clone/index.html
+++ b/nobroker-clone/index.html
@@ -21,6 +21,24 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
+        <!-- <--hamburger menu- -->
+    <div class="hamburger" onclick="toggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
+<!-- Mobile Dropdown Menu -->
+<div id="mobileMenu" class="mobile-menu">
+<a href="index.html">Home</a>
+<a href="properties.html">Buy</a>
+<a href="sell.html">Sell</a>
+<a href="about.html">About</a>
+<a href="contact.html">Contact</a>
+<a onclick="openLogin()">Login</a>
+<a onclick="openSignup()">Sign Up</a>
+</div>
+
+
 
         <div class="auth-buttons">
             <button class="btn-auth login-btn" onclick="openLogin()">Login</button>
