--- a/nobroker-clone/contact.html
+++ b/nobroker-clone/contact.html
@@ -54,10 +54,10 @@
       </div>
       <div class="form-group">
         <label>Email Address *</label>
-        <input type="email" placeholder="jetha@example.com" required>
+        <input type="email" placeholder="jethalal@example.com" required>
       </div>
       <div class="form-group">
-        <label>Phone </label><input type="tel" placeholder="+91 98765 43210">
+        <label>Phone No. *</label><input type="tel" placeholder="+91 98765 43210">
       </div>
       <div class="form-group">
         <label>Message *</label>
