--- a/nobroker-clone/sell.html
+++ b/nobroker-clone/sell.html
@@ -57,7 +57,7 @@
     <form style="max-width:600px; margin:2rem auto;">
       <div class="form-group">
         <label>Property Title</label>
-        <input type="text" placeholder="e.g. 2 BHK in Koramangala" />
+        <input type="text" placeholder="e.g. 2 BHK in sonepat" />
       </div>
       <div class="form-group">
         <label>Price (₹)</label>
